// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probar laclase de citas Actualizar cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": 1606709911545,
      "mascota": "Hook",
      "propietario": "Juan",
      "sintomas": "Solo duerme",
      "telefono": "546353323",
    },
    Object {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": 1606709911545,
      "mascota": "Nuevo Nombre",
      "propietario": "Juan",
      "sintomas": "Solo duerme",
      "telefono": "546353323",
    },
  ],
}
`;

exports[`Probar laclase de citas Agregar una nueva cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": 1606709911545,
      "mascota": "Hook",
      "propietario": "Juan",
      "sintomas": "Solo duerme",
      "telefono": "546353323",
    },
  ],
}
`;

exports[`Probar laclase de citas Eliminar cita 1`] = `
Citas {
  "citas": Array [],
}
`;
